--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,17 +1,17 @@
 #-------------------------------
 # General Site Settings
-title: Zolan
+title: Maryum Mateen
 logo: logo.svg # You can add own logo.
-description: Zolan is modern minimal theme for Jekyll
+description: Maryum's Personal Blog
 
 
 #-------------------------------
 # Author Settings
 author:
-  name: Alex Rodriguez
+  name: Maryum Mateen
   image: 01.jpg
-  say-hello: Hello, I’m <strong>Alex Rodriguez</strong>
-  bio: Designs, talks, and writes about <strong>web</strong>, <strong>ethics</strong>, <strong>privacy</strong>, and dev. I share design tutorials, free resources and inspiration. Loves <a href="#">music</a> & riding his bicycle.
+  say-hello: Hello, I’m <strong>Maryum Mateen</strong>
+  bio: I'm a student at the <strong>University of Houston</strong>. I'm currently pursuing a degree in <strong>Computer Science</strong> with a minor in <strong>Data Science</strong> and <strong>Math</strong>. <a href="#">Resume</a>
 
 
 #-------------------------------
@@ -31,7 +31,7 @@ disqus-identifier: mr-brown # add your shortname for Disqus Comment. For example
 #-------------------------------
 # Instagram Feed
 instafeed: # To enable the instafeed, use the value true. To turn off use the value false.
-instagram-profile: artemsheludko_ # Add instagram username
+instagram-profile: maryummateen_ # Add instagram username
 
 
 #-------------------------------
