--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
 #-------------------------------
 # General Site Settings
 title: Maryum Mateen
-logo: logo.png # You can add own logo.
+logo: logo1.png # You can add own logo.
 description: Maryum's Personal Blog
 
 
