social media changes

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -16,11 +16,11 @@ author:
 
 #-------------------------------
 # Contact links
-twitter: https://twitter.com/ # Add your Twitter handle
-facebook: https://facebook.com/ # Add your Facebook handle
-dribbble: https://dribbble.com/ # Add your Dribbble handle
-instagram: https://instagram.com/ # Add your Instagram handle
-pinterest: https://pinterest.com/ # Add your Pinterest handle
+twitter: https://twitter.com/MateenMaryum # Add your Twitter handle
+facebook: https://www.facebook.com/people/Maryum-Mateen/100006609678816 # Add your Facebook handle
+#dribbble: https://dribbble.com/ # Add your Dribbble handle
+instagram: https://instagram.com/maryummateen_/ # Add your Instagram handle
+#pinterest: https://pinterest.com/ # Add your Pinterest handle
 
 
 #-------------------------------
@@ -30,7 +30,7 @@ disqus-identifier: mr-brown # add your shortname for Disqus Comment. For example
 
 #-------------------------------
 # Instagram Feed
-instafeed: # To enable the instafeed, use the value true. To turn off use the value false.
+instafeed: true # To enable the instafeed, use the value true. To turn off use the value false.
 instagram-profile: maryummateen_ # Add instagram username
 
 
