--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -21,11 +21,12 @@ facebook: https://www.facebook.com/people/Maryum-Mateen/100006609678816 # Add yo
 #dribbble: https://dribbble.com/ # Add your Dribbble handle
 instagram: https://instagram.com/maryummateen_/ # Add your Instagram handle
 #pinterest: https://pinterest.com/ # Add your Pinterest handle
+linkedin: https://www.linkedin.com/in/maryum-mateen-600313195/ #linkedin handle 
 
 
 #-------------------------------
 # Comment Section (Disqus)
-disqus-identifier: mr-brown # add your shortname for Disqus Comment. For example mr-brown
+#disqus-identifier: mr-brown # add your shortname for Disqus Comment. For example mr-brown
 
 
 #-------------------------------
