--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -11,7 +11,7 @@ author:
   name: Maryum Mateen
   image: 01.jpg
   say-hello: Hello, I’m <strong>Maryum Mateen</strong>
-  bio: I'm a student at the <strong>University of Houston</strong>. I'm currently pursuing a degree in <strong>Computer Science</strong> with a minor in <strong>Data Science</strong> and <strong>Math</strong>. <a href="#">Resume</a>
+  bio: I'm a student at the <strong>University of Houston</strong>. I'm currently pursuing a degree in <strong>Computer Science</strong> with a minor in <strong>Data Science</strong> and <strong>Math</strong>, and I am currently the President of an ACM-W Chapter known as Cougarettes!. <a href="#">Resume</a>
 
 
 #-------------------------------
